Remove jvm warnings