@@ -15,6 +15,10 @@ plugins {
 }
 
 asciidoctor {
+    jvm {
+        jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED")
+    }
+
     attributes.put("allow-uri-read", "true")
     sourceDir = file('docs')
     outputDir = file('build')
